--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -79,18 +79,19 @@ body {
 }
 
 input {
-    border-color: darkgray;
+    border-color: silver;
     border-style: solid;
-    border-width: 1px;
+    border-width: 3px;
     border-radius: 4px;
-    margin-top: 2px;
+    margin-top: 3px;
     margin-bottom: 2px;
+    transition-duration: 0.5s;
 }
 
-input:focus {
-    outline: none;
-    border-color: black;
-}
+    input:focus {
+        outline: none;
+        border-color: black;
+    }
 
 .settings-box label {
     border-width:1px;
