--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -8,7 +8,7 @@
             <label for="password">Passwort:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit" class="login_button" style="margin-top: 4px;">Einloggen</button>
-            <p style="visibility: hidden;" id="message"></p>
+            <p style="display: none;" id="message"></p>
         </form>
     </div>
     <script>
