--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -26,6 +26,16 @@ body {
     color: var(--text-color);
 }
 
+div.boxed-section {
+    border-radius: 8px;
+    box-shadow: 0 2px 4px #bbb;
+    margin-top: 10px;
+}
+
+    div.boxed-section:hover {
+        box-shadow: 0 4px 8px #bbb;
+    }
+
 .login_button {
     font-family: Roboto, sans-serif;
     color: var(--button-text-color);
@@ -40,7 +50,8 @@ body {
     line-height: 18px;
     user-select: none;
     margin-top: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    margin-left: 3px;
     box-shadow: 0 2px 4px #bbb;
 }
 
