--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -79,6 +79,8 @@ div.loginButtonContainer {
 
     #home-content>* {
         margin: 8px;
+        margin-top: 14px;
+        margin-bottom: 12px;
     }
 
     #home-content:hover {
