--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -168,3 +168,14 @@ img {
 #userList .settings-list {
     width: min-content;
 }
+
+.boxed-section-button {
+    border: none;
+    background: inherit;
+    height: min-content;
+    display: flex;
+    align-items: center;
+    user-select: none;
+    cursor: pointer;
+    margin-right: 5px;
+}
