--- a/api/static/home_style.css
+++ b/api/static/home_style.css
@@ -20,6 +20,7 @@
         --button-background-color-hover: #6789df;
     }
 }
+
 body {
     font-family: Roboto;
     background-color: var(--main-background-color);
@@ -92,14 +93,21 @@ span.material-symbols-outlined {
 }
 
 input {
-    border-color: darkgray;
+    border-color: silver;
     border-style: solid;
-    border-width: 1px;
+    border-width: 3px;
     border-radius: 4px;
-    margin-top: 2px;
+    margin-top: 3px;
     margin-bottom: 2px;
+    transition-duration: 0.5s;
 }
-.login-box {
+
+    input:focus {
+        outline: none;
+        border-color: black;
+    }
+    
+box {
     display: flex;
     justify-content: center;
 }
