--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -20,9 +20,9 @@
                 {% else %}
                 <p>Eingeloggt als {{ session.username }}.</p>
                 <hr>
-                <button class="login_button" id="logout-button">Ausloggen <span class="material-symbols-outlined">logout</span></button>
-                <a class="login_button" href="{{ url_for('control_panel') }}">Kontrollpanel</a>
-                <a class="login_button" href="https://leanderkafemann.github.io/LK-Regeln/">Abstimmungsregeln</a>
+                <button class="login-button" id="logout-button">Ausloggen <span class="material-symbols-outlined">logout</span></button>
+                <a class="login-button" href="{{ url_for('control_panel') }}">Kontrollpanel</a>
+                <a class="login-button" href="https://leanderkafemann.github.io/LK-Regeln/">Abstimmungsregeln</a>
                 <script>
                     {% include 'homeCode.js' %}
                 </script>
