--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -30,13 +30,13 @@ body {
 
 div.boxed-section {
     border-radius: 8px;
-    box-shadow: 0 2px 4px #bbb;
+    /* box-shadow: 0 2px 4px #bbb; */
     margin-top: 10px;
 }
 
-    div.boxed-section:hover {
-        box-shadow: 0 4px 8px #bbb;
-    }
+/* div.boxed-section:hover {
+    box-shadow: 0 4px 8px #bbb;
+} */
 
 .login_button {
     font-family: Roboto, sans-serif;
@@ -54,14 +54,14 @@ div.boxed-section {
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 3px;
-    box-shadow: 0 2px 4px #bbb;
+    /* box-shadow: 0 2px 4px #bbb; */
 }
 
-    .login_button:hover {
-        box-shadow: 0 3px 6px #bbb;
-        transform: scale(1.02);
-        background-color: var(--button-background-color-hover);
-    }
+.login_button:hover {
+    /* box-shadow: 0 3px 6px #bbb; */
+    /* transform: scale(1.02); */
+    background-color: var(--button-background-color-hover);
+}
 
 div.loginButtonContainer {
     margin-top: 15px;
@@ -74,18 +74,18 @@ div.loginButtonContainer {
     border-width: 2px;
     border-radius: 4px;
     border-color: darkgray;
-    box-shadow: 0 2px 4px #bbb;
+    /* box-shadow: 0 2px 4px #bbb; */
 }
 
-    #home-content>* {
-        margin: 8px;
-        margin-top: 14px;
-        margin-bottom: 12px;
-    }
+#home-content>* {
+    margin: 8px;
+    margin-top: 14px;
+    margin-bottom: 12px;
+}
 
-    #home-content:hover {
-        box-shadow: 0 4px 8px #bbb;
-    }
+/* #home-content:hover {
+    box-shadow: 0 4px 8px #bbb;
+} */
 
 #container {
     display: grid;
@@ -106,10 +106,10 @@ input {
     transition-duration: 0.5s;
 }
 
-    input:focus {
-        outline: none;
-        border-color: black;
-    }
+input:focus {
+    outline: none;
+    border-color: black;
+}
 
 .settings-box label {
     border-width:1px;
@@ -121,10 +121,10 @@ input {
     user-select: none;
 }
 
-    .settings-box label:hover {
-        background:#eee;
-        cursor:pointer;
-    }
+.settings-box label:hover {
+    background:#eee;
+    cursor:pointer;
+}
 
 .copy-link {
     border-radius: 4px;
@@ -142,16 +142,16 @@ input {
 
 img {
     width: 50%;
-    box-shadow: 0 4px 8px #bbb;
+    /* box-shadow: 0 4px 8px #bbb; */
     border-radius: 16px;
-    transition-duration: 0.7s;
+    transition-duration: 0.5s;
     margin: 5px;
 }
 
-    img:hover {
-        box-shadow: 0 6px 12px #bbb;
-        transform: scale(1.01);
-    }
+/* img:hover {
+    box-shadow: 0 6px 12px #bbb;
+    transform: scale(1.01);
+} */
 
 #userList {
     text-align: left;
