--- a/api/static/home_style.css
+++ b/api/static/home_style.css
@@ -148,13 +148,13 @@ box {
 
 img {
     width: 50%;
-    box-shadow: 0 4px 8px #bbb;
+    /* box-shadow: 0 4px 8px #bbb; */
     border-radius: 16px;
     transition-duration: 0.7s;
     margin: 5px;
 }
 
-img:hover {
+/* img:hover {
     box-shadow: 0 6px 12px #bbb;
-    /*transform: scale(1.01);*/
-}
+    transform: scale(1.01);
+} */
