--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -23,7 +23,8 @@
 }
 
 body {
-    font-family: Roboto;
+    --document-font: 'Google Sans', sans-serif;
+    font-family: var(--document-font);
     background-color: var(--main-background-color);
     color: var(--text-color);
 }
@@ -38,8 +39,8 @@ div.boxed-section {
     box-shadow: 0 4px 8px #bbb;
 } */
 
-.login_button {
-    font-family: Roboto, sans-serif;
+.login-button {
+    font-family: var(--document-font);
     color: var(--button-text-color);
     transition: all 0.5s;
     text-decoration: none;
@@ -57,7 +58,7 @@ div.boxed-section {
     /* box-shadow: 0 2px 4px #bbb; */
 }
 
-.login_button:hover {
+.login-button:hover {
     /* box-shadow: 0 3px 6px #bbb; */
     /* transform: scale(1.02); */
     background-color: var(--button-background-color-hover);
@@ -97,6 +98,7 @@ div.loginButtonContainer {
 }
 
 input {
+    font-family: var(--document-font);
     border-color: silver;
     border-style: solid;
     border-width: 3px;
