--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -5,6 +5,7 @@
     <title>
         Kontrollpanel
     </title>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');</style>
     <link rel="stylesheet" href="/static/controlpanel_style.css/" />
     {{ boxedSections.sectionHead() }}
     <link rel="manifest" href="manifest" />
@@ -14,7 +15,7 @@
     <body>
         <div id="container">
             <div id="home-content">
-                <div class="loginButtonContainer"><a href="{{ url_for('home') }}" class="login_button">Zurück zum Hauptmenü</a></div>
+                <div class="loginButtonContainer"><a href="{{ url_for('home') }}" class="login-button">Zurück zum Hauptmenü</a></div>
                 <script>
                     const ownSettings = {{ session.settings.value }};
                     const ownPgroup = {{ session.permission_group }};
@@ -49,7 +50,7 @@
                     </div>
                     {{ boxedSections.closeSection() }}
                     <br>
-                    <button class="login_button" type="submit">Erstellen</button>
+                    <button class="login-button" type="submit">Erstellen</button>
                     <div class="message" style="display: none;">
                         <p></p>
                         <button class="copy-link" onclick="copyAddUserMessageLink(event);" style="display: none;" type="button">
@@ -94,7 +95,7 @@
                     </tr>
                 </template>
                 <template id="user-table-option-button-template">
-                    <button class="login_button" type="button"></button>
+                    <button class="login-button" type="button"></button>
                 </template>
                 <script>
                     {% include 'userList.js' %}
