--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -36,7 +36,7 @@
                     <label for="pgroup">Berechtigungsgruppe:</label>
                     <input type="number" id="pgroup" name="pgroup" value="{{ session.permission_group - 1 }}" max="{{ session.permission_group - 1 }}" required>
                     <br>
-                    <label>Einstellungen/Berechtigungen:</label>
+                    <label>Optionen:</label>
                     {{ boxedSections.openSection() }}
                     <div class="settings-box">
                     {% for setting in Settings.__members__.values() %}
@@ -48,7 +48,7 @@
                         {% endif %}
                     {% endfor %}
                     </div>
-                    {{ boxedSections.closeSection() }}
+                    {{ boxedSections.closeSection("Optionen") }}
                     <br>
                     <button class="login-button" type="submit">Erstellen</button>
                     <div class="message" style="display: none;">
@@ -74,7 +74,7 @@
                         <tr>
                             <th>Nutzername</th>
                             <th>Berechtigungsgruppe</th>
-                            <th>Einstellungen/Berechtigungen</th>
+                            <th>Benutzereinstellungen</th>
                             <th>Status</th>
                             <th>Optionen</th>
                         </tr>
