--- a/api/templates/boxedSections.html
+++ b/api/templates/boxedSections.html
@@ -69,7 +69,7 @@ function handleBoxedSectionReloaderButton(event, onReload) {
 <div class="boxed-content"> 
 {%- endmacro %}
 
-{% macro closeSection(title="", onFirstOpen="",) -%}
+{% macro closeSection(title="", onFirstOpen="") -%}
 </div>
 </div>
 <div class="boxed-section-button">
