--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -88,7 +88,7 @@
                         <td class="settings-column">
                             {{ boxedSections.openSection() }}
                             <ul class="settings-list"></ul>
-                            {{ boxedSections.closeSection() }}
+                            {{ boxedSections.closeSection("Ansehen") }}
                         </td>
                         <td class="status-column"></td>
                         <td class="options-column"></td>
