--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -7,7 +7,7 @@
             <input type="text" id="username" name="username" required>
             <label for="password">Passwort:</label>
             <input type="password" id="password" name="password" required>
-            <button type="submit" class="login_button" style="margin-top: 4px;">Einloggen</button>
+            <button type="submit" class="login-button" style="margin-top: 4px;">Einloggen</button>
             <p style="display: none;" id="message"></p>
         </form>
     </div>
