--- a/api/templates/boxedSections.html
+++ b/api/templates/boxedSections.html
@@ -18,8 +18,10 @@
         display: flex;
         align-items: center;
         user-select: none;
-        cursor: pointer;
         margin-right: 8px;
+    }
+    .boxed-section-button span {
+        cursor: pointer;
     }
     .boxed-section-button .material-symbols-outlined {
         aspect-ratio: 1/1;
