--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -47,7 +47,7 @@ div.boxed-section {
     transition: all 0.5s;
     text-decoration: none;
     background-color: var(--button-background-color);
-    border: black solid 1px;
+    border: none;
     border-radius: 16px;
     cursor: pointer;
     font-size: 16px;
@@ -75,7 +75,7 @@ div.loginButtonContainer {
     text-align: center;
     border-style: solid;
     border-width: 2px;
-    border-radius: 4px;
+    border-radius: 8px;
     border-color: darkgray;
     /* box-shadow: 0 2px 4px #bbb; */
 }
