--- a/api/static/register_style.css
+++ b/api/static/register_style.css
@@ -4,7 +4,7 @@
     transition: all 0.5s;
     text-decoration: none;
     background-color: var(--button-background-color);
-    border: black solid 1px;
+    border: none;
     border-radius: 16px;
     cursor: pointer;
     font-size: 16px;
