--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -101,10 +101,13 @@ div.loginButtonContainer {
 
 input {
     font-family: var(--document-font);
-    border-color: silver;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 4px;
+    /*border-color: none;*/
+    border-style: none;
+    /*border-width: 3px;*/
+    border-radius: 12px;
+    height: 24px;
+    padding-left: 8px;
+    padding-right: 8px;
     margin-top: 3px;
     margin-bottom: 2px;
     transition-duration: 0.5s;
