more consistent style

--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -101,15 +101,15 @@ div.loginButtonContainer {
 
 input {
     font-family: var(--document-font);
-    /*border-color: none;*/
-    border-style: none;
-    /*border-width: 3px;*/
-    border-radius: 12px;
     height: 24px;
+    /*! border-color: none; */
+    border-style: none;
+    /*! border-width: 3px; */
+    border-radius: 12px;
+    margin-top: 3px;
+    margin-bottom: 12px;
     padding-left: 8px;
     padding-right: 8px;
-    margin-top: 3px;
-    margin-bottom: 2px;
     transition-duration: 0.5s;
 }
 
