--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -57,6 +57,7 @@ div.boxed-section {
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 3px;
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
     /* box-shadow: 0 2px 4px #bbb; */
 }
 
@@ -77,6 +78,7 @@ div.loginButtonContainer {
     border-width: 2px;
     border-radius: 8px;
     border-color: darkgray;
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
     /* box-shadow: 0 2px 4px #bbb; */
 }
 
