--- a/api/static/register_style.css
+++ b/api/static/register_style.css
@@ -1,3 +1,26 @@
+@media (prefers-color-scheme: dark) {
+    body {
+        --main-background-color: #181818;
+        --sec-background-color: #1e1e1e;
+        --text-color: #ddd;
+        --hr-color: #444;
+        --button-text-color: #222;
+        --button-background-color: #87a9ff;
+        --button-background-color-hover: #6789df;
+    }
+}
+@media (prefers-color-scheme: light) {
+    body {
+        --main-background-color: #f1f1f1;
+        --sec-background-color: #eaeaea;
+        --text-color: #222;
+        --hr-color: #ddd;
+        --button-text-color: #222;
+        --button-background-color: #87a9ff;
+        --button-background-color-hover: #6789df;
+    }
+}
+
 .login_button {
     font-family: Roboto, sans-serif;
     color: var(--button-text-color);
@@ -14,6 +37,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 3px;
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
     /* box-shadow: 0 2px 4px #bbb; */
 }
 
@@ -48,13 +72,18 @@ h2 {
 }
 
 input {
-    border-color: silver;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 4px;
+    font-family: var(--document-font);
+    height: 24px;
+    /*! border-color: none; */
+    border-style: none;
+    /*! border-width: 3px; */
+    border-radius: 12px;
     margin-top: 3px;
-    margin-bottom: 2px;
+    margin-bottom: 12px;
+    padding-left: 8px;
+    padding-right: 8px;
     transition-duration: 0.5s;
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
 }
 
 input:focus {
