--- a/api/static/home_style.css
+++ b/api/static/home_style.css
@@ -69,6 +69,8 @@ span.material-symbols-outlined {
     border-style: none;
     padding: 8px;
     border-radius: 16px;
+    border-width: 2px;
+    border-color: darkgray;
     background-color: var(--sec-background-color);
     box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
     /*! box-shadow: 0 2px 4px #bbb; */
