added span to permissions

--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -45,7 +45,7 @@
                         {% if setting in session.settings and not setting.name.startswith("_") and setting.name != "NONE" %}
                         <label>
                             <input name="setting_{{ setting.name }}" id="setting_{{ setting.name }}" type="checkbox" style="margin-bottom: 2px;">
-                            {{ setting.get_translated_name() }}
+                            <span>{{ setting.get_translated_name() }}</span>
                         </label>
                         {% endif %}
                     {% endfor %}
