--- a/api/static/home_style.css
+++ b/api/static/home_style.css
@@ -66,7 +66,7 @@ span.material-symbols-outlined {
 
 #home-content {
     text-align: center;
-    border-style: none;
+    border-style: solid;
     padding: 8px;
     border-radius: 16px;
     border-width: 2px;
